  * added "all users" and "new user" action to user detail page
  * optimized build process (upgraded pip to use cache and added wheel option)
  * added search form in media center home page
  * fixed WPA2 network connection (cf #231)
  * fixed bad username displayed in set_password view header
  * added "show password" button near login password field (cf #236)

 -- Yohan Boniface <hi@yohanboniface.me>  Sat, 5 Dec 2015 11:25:27 +0100

ideascube (0.6.0-1) unstable; urgency=low

  * services are now using systemd (https://github.com/ideascube/ideascube/pull/213)
  * conf is factorized (https://github.com/ideascube/ideascube/pull/217)
  * upgraded django-taggit to 0.17.5
  * added conf for Ethiopian boxes and new Jordan one

 -- Yohan Boniface <hi@yohanboniface.me>  Sat, 28 Nov 2015 11:25:27 +0100

ideascube (0.5.0-1) unstable; urgency=low

  * wifi management [#197](https://github.com/ideascube/ideascube/pull/197)
  * do not export user names in user dumps [#212](https://github.com/ideascube/ideascube/pull/212)
  * rework home page [#164](https://github.com/ideascube/ideascube/pull/164)
  * add import/export of libary books and specimens [#204](https://github.com/ideascube/ideascube/pull/204)
  * add import media management command [#29](https://github.com/ideascube/ideascube/pull/29)
  * add backup management command [#166](https://github.com/ideascube/ideascube/pull/166)
  * add staff creation page at first ideascube run
  * add "confirm" to server stop and restart buttons
  * switched from gunicorn to uwsgi [#161](https://github.com/ideascube/ideascube/pull/161)
  * allow tar, bztar and gztar formats for backup [#171](https://github.com/ideascube/ideascube/pull/171)
  * use our own login page after staff_member_required decorator [#87](https://github.com/ideascube/ideascube/pull/87)
  * Add page for media filtering by kind [#183](https://github.com/ideascube/ideascube/pull/183)
  * more responsive CSS [#162](https://github.com/ideascube/ideascube/pull/162)
