@@ -11,6 +11,7 @@ ideascube (0.7.0-dev) unstable; urgency=low
   * fixed WPA2 network connection (cf #231)
   * fixed bad username displayed in set_password view header
   * added "show password" button near login password field (cf #236)
+  * prevent migrate command to delete search index (cf #234)
 
  -- Yohan Boniface <hi@yohanboniface.me>  Sat, 5 Dec 2015 11:25:27 +0100
 
